[package]
name = "open-season"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_season_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
typst = "0.12"
typst-pdf = "0.12"
zip = "2.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1.8"
rand = "0.8"
base64 = "0.22"
walkdir = "2"
comemo = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
